ghc-4335c07/testsuite/tests/parser/should_fail/readFail024.stderr

readFail024.hs:5:2: parse error on input ‘h’
